--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.0.0"
 description = "SiMPLe plotting and fitting"
 authors = ["Alexander Puck Neuwirth <alexander@neuwirth-informatik.de>"]
 readme = "README.md"
-repository = "https://github.com/APN-Pucky/smpl_io"
+repository = "https://github.com/APN-Pucky/smpl_doc"
 
 [tool.poetry.dependencies]
 python = "^3.8"
