--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,7 +1,7 @@
 [tool.poetry]
 name = "smpl_doc"
 version = "0.0.0"
-description = "SiMPLe plotting and fitting"
+description = "SiMPLe magic documentation"
 authors = ["Alexander Puck Neuwirth <alexander@neuwirth-informatik.de>"]
 readme = "README.md"
 repository = "https://github.com/APN-Pucky/smpl_doc"
