--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -47,7 +47,7 @@ jobs:
 
     - name: Test with pytest
       run: |
-        pytest --cov --cov-report=xml -r sx tests/
+        pytest --cov --cov-report=xml -r sx
 
     - name: Report core project coverage with Codecov
       if: >-
