--- a/pyproject.toml
+++ b/pyproject.toml
@@ -73,6 +73,9 @@ features = [
 [tool.hatch.version]
 source = "vcs"
 
+[tool.ruff]
+line-length = 80
+
 [tool.ruff.lint]
 extend-select = [
   "B",        # flake8-bugbear
