--- a/.github/workflows/devel.yml
+++ b/.github/workflows/devel.yml
@@ -1,18 +1,18 @@
 name: devel
 
-on: 
+on:
   push:
     branches-ignore:
       - 'master'
       - 'stable'
-    tags-ignore: 
+    tags-ignore:
       - '*'
 
 jobs:
     devel:
       runs-on: ubuntu-latest
       container:
-        image: apnpucky/ubuntu-poetry
+        image: apnpucky/ubuntu-hatch
       steps:
         - uses: APN-Pucky/make-python-action@main
           with:
