--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,15 +1,15 @@
 name: release
 
-on: 
+on:
   push:
-    tags: 
+    tags:
       - '*'
 
 jobs:
     build:
       runs-on: ubuntu-latest
       container:
-        image: apnpucky/ubuntu-poetry
+        image: apnpucky/ubuntu-hatch
       steps:
         - uses: APN-Pucky/make-python-action@main
           with:
