--- a/.github/workflows/stable.yml
+++ b/.github/workflows/stable.yml
@@ -1,17 +1,17 @@
 name: stable
 
-on: 
+on:
   push:
     branches:
       - 'stable'
-    tags-ignore: 
+    tags-ignore:
       - '*'
 
 jobs:
     build:
       runs-on: ubuntu-latest
       container:
-        image: apnpucky/ubuntu-poetry
+        image: apnpucky/ubuntu-hatch
       steps:
         - uses: APN-Pucky/make-python-action@main
           with:
